ployzd/src/envoy_tests/renderer_projection.rds.yaml
version_info: "64da812043281f6839f0fdbe8bb7ff63dff071847a87af60089bb010426ee231"
resources:
- "@type": type.googleapis.com/envoy.config.route.v3.RouteConfiguration
  name: http
  metadata:
    filter_metadata:
      com.ployz:
        projection_digest: 64da812043281f6839f0fdbe8bb7ff63dff071847a87af60089bb010426ee231
  virtual_hosts:
  - name: ployz-http-empty.example.com
    domains:
    - empty.example.com
    routes:
    - match:
        prefix: /
      route:
        cluster: ployz-http-empty.example.com
        timeout: 0s
        retry_policy:
          retry_on: connect-failure
          num_retries: 1
  - name: ployz-http-example.com
    domains:
    - example.com
    routes:
    - match:
        path: "/.well-known/acme-challenge/token"
      direct_response:
        status: 200
        body:
          inline_string: "token.thumbprint"
    - match:
        prefix: /
      route:
        cluster: ployz-http-example.com
        timeout: 0s
        retry_policy:
          retry_on: connect-failure
          num_retries: 1
  - name: ployz-verify
    domains:
    - "*"
    routes:
    - match:
        path: /.ployz-verify
      direct_response:
        status: 200
        body:
          inline_string: aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
- "@type": type.googleapis.com/envoy.config.route.v3.RouteConfiguration
  name: https
  metadata:
    filter_metadata:
      com.ployz:
        projection_digest: 64da812043281f6839f0fdbe8bb7ff63dff071847a87af60089bb010426ee231
  virtual_hosts:
  - name: ployz-https-secure.example.com
    domains:
    - secure.example.com
    routes:
    - match:
        prefix: /
      route:
        cluster: ployz-https-secure.example.com
        timeout: 0s
        retry_policy:
          retry_on: connect-failure
          num_retries: 1
